prepare for release